    idea behind the player check in CollsionDetect.java.

    !!!! When you spam two directions and are colliding with a wall, the wall moves.

    (NOTICE) Not as important as it is only the player that influences something, like that and it doesn't happen to much.


Things to add:
    -Fix the calculations for center of screen, when constucting the player's location.

    -Why do we need to have a collisiondection thing for the InvisWall, and how did that fix the problem of Entities intersecting??

    -Entity AI, where they move towards the player.

    -Projectiles.java

    -I guess we remake or add onto the entity class, with a string displaying the type of entity it is because we need to have dmg
    for player vs enemies and player vs projectiles and enemies vs player projectiles. Currently we have no idea else than
    "yes this entity is colliding with this entity".

    -Item.class which will be extending Entity.java, also with that we'll have another collision detect method I guess.

    -Add display of the time currently on the top center of the screen.

    -Title and end screen.

    -When you die, it takes that time and puts it into a txt file or a json file and thats the leaderbaord I guess.


Current date: 5/18/2022

    Changed speeds 0-20 for People.java. (Set to a random speed between 0->5)
    'Entity.Java had it's hitbox creator +2' on all sides so it isn't so cut into the pictures when the collide. (Removed)
    In Game.java actually checked if people obj collided with player obj.
    In Game.java when you press escape it freezes the game and shows hitboxes. (Swapped it for press esc to see skins)
    In CollsionDetect.java fixed a problem where the hitboxes were only being updated to their original positions
        when they collide. (Still having a problem with hitboxes overlapping and freezing both characters)

    Kind of need a timer to fix the problem that people.java is moving too much, thus colliding to far into the player  