@@ -135,7 +135,7 @@ public class Entity{
 
         }
         public void playerInfluencedMovement(int playerSpeed, KeyHandler key){
-            if(!collides){// doesn't really matetr because in PlayerData if it collides it returns a speed of 0;
+            if(!this.collides){// doesn't really matetr because in PlayerData if it collides it returns a speed of 0;
                 if(key.upKey){
                     posY += playerSpeed;
                 }
@@ -148,8 +148,8 @@ public class Entity{
                 if(key.leftKey){
                     posX += playerSpeed;
                 }
+                hitbox.setLocation(posX, posY);
             }
-            hitbox.setLocation(posX, posY);
         }
 
 
